fixes #1584 move padding from single connection-message to chat-window (and reduce the padding to align with the rest

--- a/webofneeds/won-owner-webapp/src/main/webapp/style/_post-messages.scss
+++ b/webofneeds/won-owner-webapp/src/main/webapp/style/_post-messages.scss
@@ -122,12 +122,16 @@
 
     .pm__content {
       grid-area: main;
-      padding: 1rem 0;
+      padding: 0.5rem;
       background: white;
       border: $thinGrayBorder;
       overflow: auto;
       flex-grow: 1;
-      
+
+      &__loadbutton {
+        width: 100%;
+      }
+
       &__agreement {
         @include speech-bubble-bottom($won-light-gray, $won-line-gray, 0.3125rem, $thinBorderWidth, 0.5rem);
         margin: 0 0.5rem;
